Skip adding attribute if number is NaN